styles/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.page {
  min-width: 1100px;
  max-width: 1600px;
  margin: 0 auto;
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  display: flex;
  align-items: center;
  position: relative;
  background-color: #F2F2F2;
}

.header__logo {
  width: 154px;
  height: 31px;
}

.header__logo_place_header {
  position: absolute;
  top: 30px;
  left: 64px;
  z-index: 3;
}

.header__title {
  line-height: 96px;
  font-size: 102px;
  font-weight: bold;
  width: 730px;
  margin-left: 64px;
}

.header__subtitle {
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  width: 388px;
  position: absolute;
  bottom: 30px;
  left: 64px;
}

.header__main-illustration {
  width: 756px;
  height: 608px;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 2;
}

.header__square-pic {
  height: 568px;
  width: 568px;
  background-color: #2F80ED;
  position: absolute;
  right: 0;
  top: 64px;
}

.description {
  display: flex;
  margin: 100px auto;
  width: 80%;
}

.two-columns {
  display: flex;
  justify-content: space-between;
}

.brief {
  width: 175px;
  color: #2F80ED;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}

.main-text {
  min-width: 784px;
  width: 80%;
}

.paragraph {
  margin-bottom: 30px;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.paragraph:nth-child(3) {
  margin-bottom: 0;
}

.span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: bold;
}

.digits {
  margin-bottom: 100px;
}

.digits__title {
  width: 60%;
  text-align: center;
  margin: 0 auto 20px;
  line-height: 1.15;
  font-size: 60px;
  font-weight: bold;
}

.digits__subtitle {
  width: 60%;
  text-align: center;
  margin: 0 auto;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.table {
  width: 1100px;
  margin: 0 auto;
  list-style: none;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.table__cell {
  width: 250px;
  margin-top: 60px;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 20px;
}

.table__text {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}

.table__span {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  display: inline-block;
  margin-top: 20px;
}

.feynman {
  display: flex;
  flex-direction: column;
  position: relative;
  height: 790px;
  background-color:  #F2F2F2;
  z-index: -2;
  padding-top: 100px  ;
}

.feynman__title {
  width: 775px;
  text-align: center;
  margin: 0 auto;
  line-height: 1.15;
  font-size: 120px;
  font-weight: bold;
  margin-bottom: 70px;
}

.feynman__subtitle {
  text-align: center;
  margin: 0 auto;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.feynman__link {
  position: absolute;
  top: 50%;
  right: 48px;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.feynman__image {
  width: 867px;
  height: 637px;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: -1;
}

.kaufman {
  position: relative;
  padding: 90px 0;
  z-index: -2;
  background-color: #1F1F1F;
  overflow: hidden;
}

.kaufman__title_theme_dark {
  width: 60%;
  text-align: center;
  margin: 0 auto 20px;
  line-height: 1.15;
  font-size: 60px;
  font-weight: bold;
  color: #ffffff;
}

.kaufman__subtitle_theme_dark {
  width: 60%;
  text-align: center;
  margin: 0 auto;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  color: #ffffff;
}

.kaufman__triangle {
  width: 660px;
  height: 636px;
  position: absolute;
  right: -124px;
  top: 0;
  z-index: -1;
}

.table_theme_dark {
  width: 1100px;
  margin: 0 auto;
  list-style: none;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.table__cell_theme_dark {
  width: 200px;
  color: #ffffff;
  margin-right: 0;
  margin-top: 80px;
}

.table__heading_theme_dark {
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 20px;
  color: #ffffff;
}

.table__text_theme_dark {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  color: #ffffff;
}

.footer {
  min-height: 350px;
  background-color: #1F1F1F;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 60px 0 40px;
}

.footer__columns {
  position: relative;
  width: 90%;
  display: flex;
  justify-content: space-between;
}

.footer__column_content_copyright {
  display: flex;
  flex-basis: 711px;
  align-items: end;
}

.footer__author {
  color: #ffffff;
  margin: 18px 0;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column_content_about {
  display: flex;
  flex-direction: column;
}

.footer__column-heading {
  margin-bottom: 20px;
  line-height: 30px;
  font-size: 18px;
  font-weight: bold;
}

.footer__column-link {
  list-style: none;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
  color: #ffffff;
}

.footer__column_content_social {
  display: flex;
  flex-direction: column;
}

.footer__logo {
  width: 183px;
  height: 35px;
  position: absolute;
  top: 0;
  left: 0;
}

.footer__column-heading {
  color: #ffffff;
}

